clean up more css, add bootstrap to menu to reduce size of page, fix map on contacts page to look better on small screens

--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -1,3 +1,7 @@
 .wrapper{
   padding-top: 80px;
 }
+.mapBox{
+  width: 80%;
+  margin: auto;
+}
